--- a/monitoria/01-basicos/respuestas.html
+++ b/monitoria/01-basicos/respuestas.html
@@ -9,16 +9,16 @@
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="../../website/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="../../website/css/colors.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="/website/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="/website/css/colors.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link rel="icon" href="../../website/assets/icon.png">
+    <link rel="icon" href="/website/assets/icon.png">
   </head>
 
   <body>
     <!--  Scripts-->
     <script src="https://answer.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="../../website/js/scripts.js"></script>
+    <script src="/website/js/scripts.js"></script>
     <br><br>
 
     <h1 class="center">
