--- a/monitoria/08-para/index.html
+++ b/monitoria/08-para/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+</div><br><br><!DOCTYPE html>
 <!-- PERSONAL PORTFOLIO -->
 <html>
 
@@ -22,57 +22,50 @@
     <br><br>
 
     <h1 class="center">
-      I. Algoritmos Basicos
+      VI. Ciclos Para
     </h1>
     <br><br>
 
     <div class="help">
-      // Declaración:<br>
-      int a;<br>
-      float b;<br>
-      // Asignación:<br>
-      a = 2;<br>
-      b = 0.3;<br>
+      // Inicio de un Para<br>
+      for (int i = 1; i <= 10; i ++)<br>
+      <br>
+      // Fin de un Para:<br>
+      }<br>
     </div><br><br>
 
     <div class="exercise easy">
-      Se desea saber el area de un triangulo, dada su base y altura.
+      Escriba un algoritmo que muestre los numeros del 1 a un numero dado, utilizando un ciclo para.
     </div>
     <br><br>
 
     <div class="exercise easy">
-      Se desea saber la longitud de la hipotenusa de un triangulo, dada la longitud
-      de ambos catetos.
+      Escriba un algoritmo que muestre los numeros pares del 1 a un numero dado, utilizando un ciclo para.
     </div>
     <br><br>
 
     <div class="exercise easy">
-      Se desea saber el area y circunferencia de un circulo, dado su radio.
+      Escriba un algoritmo que muestre la cantidad dada de numeros impares, utilizando un ciclo para.
+    </div>
+    <br><br>
+
+    <div class="exercise easy">
+      Escriba un algoritmo que sume todos los numeros del 1 a un numero dado, utilizando un ciclo para.
+    </div>
+    <br><br>
+
+    <div class="exercise easy">
+      Escriba un algoritmo que realice las tablas de multiplicar de un numero dado, utilizando un ciclo para.
     </div>
     <br><br>
 
     <div class="exercise medium">
-      Se desea saber cuantos meses han transcurrido entre dos fechas.
+      Escriba un algoritmo que resuelva el factorial de un numero dado, utilizando un ciclo para.
     </div>
     <br><br>
 
     <div class="exercise hard">
-      Se desea saber cuantas horas tarda en llenarse un tanque con capacidad de 50
-      metros cubicos, utilizando una manguera de capacidad L litros de agua por
-      minuto.
-      <p>
-      Recuerde que un metro cubico equivale a 1000 litros.
-    </div>
-    <br><br>
-
-    <div class="exercise hard">
-      Se desea saber cuanto debe pagar un cliente de un sitio de comida rapida,
-      dada la cantidad de gaseosas, perros calientes y hamburguesas pedidas.
-      <p>
-        Precios:<br>
-        Perro Caliente: $5500<br>
-        Hamburguesa: $8000<br>
-        Gaseosa: $2500<br>
+      Escriba un algoritmo que muestre los primeros n elementos de la serie Fibonacci, utilizando un ciclo para.
     </div>
     <br><br>
 
