--- a/404.html
+++ b/404.html
@@ -5,22 +5,19 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-    <title>Monitoria Algoritmia</title>
+    <title>Andrés Movilla - Portfolio</title>
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="website/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="website/css/colors.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link rel="icon" href="website/assets/icon.png">
+    <link href="/website/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link rel="icon" href="/website/assets/icon.png">
   </head>
 
   <body>
     <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="website/js/scripts.js"></script>
     <br><br><br><br><br>
 
-    <h1 class="red lighter text-white center">
+    <h1 style="width: 100%; background: #F86760; color: white; text-align: center;">
       <br>
       Oops.
       <br><br>
