--- a/film/index.html
+++ b/film/index.html
@@ -8,9 +8,7 @@
     <title>Andrés Movilla - Film</title>
 
     <!-- CSS  -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="../website/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="../website/css/colors.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="../website/css/header.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/film.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link rel="icon" href="../website/assets/icon.png">
@@ -20,47 +18,18 @@
 
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="../website/js/scripts.js"></script>
     <script src="../website/js/header.js"></script>
-    <script src="js/film.js"></script>
 
-        <div class="header">
-          <img class="head center-on-limit2" id="h" src="../website/assets/personal logo.png">
+    <div class="header" id="header-container"></div>
 
-          <div class="hide-on-limit1">
-            <span class="large">Andrés Movilla</span>
-          </div>
+    <div class="loader"></div>
+    <div class="ring first"></div>
+    <div class="ring second"></div>
+    <div class="ring third"></div>
 
-          <span class="hide-on-limit1">|</span>
-          <div class="btn ffx fx-dark enlarge">
-            <a href="">CODE</a>
-          </div>
-
-          <span class="hide-on-limit1">|</span>
-          <div class="btn ffx fx-dark enlarge">
-            <a href="../gamedesign">GAME DESIGN</a>
-          </div>
-
-          <span class="hide-on-limit1">|</span>
-          <div class="btn ffx fx-dark enlarge">
-            <a href="../gamedev">GAME DEV</a>
-          </div>
-
-          <span class="hide-on-limit1">|</span>
-          <div class="btn ffx fx-dark enlarge">
-            <a href="../film">FILM</a>
-          </div>
-
-          <span class="hide-on-limit1">|</span>
-          <div class="btn ffx fx-dark right enlarge">
-            <a href="../contact" id="k">CONTACT</a>
-          </div>
-        </div>
-
-        <br><br><br><br><br><br>
-        <div class="center">
-          <i class="material-icons large">videocam</i>
-        </div>
+    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24">
+      <path d="M19.615 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/>
+    </svg>
 
 
 
