--- a/gamedev/dog/index.html
+++ b/gamedev/dog/index.html
@@ -9,19 +9,19 @@
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="../../website/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="../../website/css/colors.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="../../website/css/header.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="/website/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="/website/css/colors.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="/website/css/header.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="../css/project.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link rel="icon" href="../../website/assets/icon.png">
+    <link rel="icon" href="/website/assets/icon.png">
   </head>
 
   <body>
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="../../website/js/scripts.js"></script>
-    <script src="../../website/js/header.js"></script>
+    <script src="/website/js/scripts.js"></script>
+    <script src="/website/js/header.js"></script>
     <script src="js/init.js"></script>
 
     <br>
