--- a/gamedev/index.html
+++ b/gamedev/index.html
@@ -8,9 +8,7 @@
     <title>Andrés Movilla - Game Dev</title>
 
     <!-- CSS  -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="../website/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="../website/css/colors.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="../website/css/header.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/gamedev.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link rel="icon" href="../website/assets/icon.png">
@@ -20,117 +18,80 @@
 
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="../website/js/scripts.js"></script>
     <script src="../website/js/header.js"></script>
-    <script src="js/gamedev.js"></script>
 
-    <div class="header">
-      <img class="head center-on-limit2" id="h" src="../website/assets/personal logo.png">
+    <div class="header" id="header-container"></div>
 
-      <div class="hide-on-limit1">
-        <span class="large">Andrés Movilla</span>
-      </div>
+    <div class="container">
 
-      <span class="hide-on-limit1">|</span>
-      <div class="btn ffx fx-dark enlarge">
-        <a href="">CODE</a>
-      </div>
-
-      <span class="hide-on-limit1">|</span>
-      <div class="btn ffx fx-dark enlarge">
-        <a href="../gamedesign">GAME DESIGN</a>
-      </div>
-
-      <span class="hide-on-limit1">|</span>
-      <div class="btn ffx fx-dark enlarge">
-        <a href="../gamedev">GAME DEV</a>
-      </div>
-
-      <span class="hide-on-limit1">|</span>
-      <div class="btn ffx fx-dark enlarge">
-        <a href="../film">FILM</a>
-      </div>
-
-      <span class="hide-on-limit1">|</span>
-      <div class="btn ffx fx-dark right enlarge">
-        <a href="../contact" id="k">CONTACT</a>
-      </div>
-    </div>
-
-    <br><br><br><br><br><br>
-
-
-    <!-- UNITY SIDESCROLLER -->
-    <div class="game text-white white-bkg">
-      <div class="block-img cut-top-right">
-        <img src="assets/action.gif" width="100%" style="margin-top:-20%">
-      </div>
-      <div class="block-text right">
-        <div class="center large">
-          Sidescroller
+      <!-- UNITY SIDESCROLLER -->
+      <div class="game">
+        <div class="img">
+          <img src="assets/action.gif" width="100%" style="margin-top:-20%">
         </div>
-        <div class="desc center-block">
-          Personal project. Currently in development. Second Unity Project. Battle
-          through 2D minimalist levels in a 3D sidescroller, with the ability to
-          make custom levels.
-        </div>
-        <hr>
-        <a href="actionplatformer">
-          <div class="center btn ffx fx-white center-block">
-            <span class="medium">GO TO SITE</span>
+
+        <div class="description">
+          <div class="cutout"></div>
+          <div class="cutout black text-white">
+            <div class="title">
+              Untitled Sidescroller Project
+            </div>
+            <div class="text">
+              Personal project. Currently in development. Second Unity Project. Battle
+              through 2D minimalist levels in a 3D sidescroller, with the ability to
+              make custom levels.
+            </div>
           </div>
-        </a>
+        </div>
       </div>
-    </div>
 
-    <!-- PINTABLE MELEE -->
-    <div class="game text-white blue-bkg">
-      <div class="block-text">
-        <div class="center large">
-          Pintable Melee
+      <!-- PINTABLE MELEE -->
+      <div class="game">
+        <div class="img">
+          <img src="assets/melee.gif" width="100%">
         </div>
-        <div class="desc center-block">
-          Original idea. Currently in development. First Unity Project. Battle
-          out in a 3D scene, causing the floor to rise and sink, causing your
-          opponents and other objects to fly in the air, or be kicked back.
-        </div>
-        <hr>
-        <a href="melee">
-          <div class="center btn ffx fx-white center-block">
-            <span class="medium">GO TO SITE</span>
+
+        <div class="description">
+          <div class="cutout"></div>
+          <div class="cutout white">
+            <div class="title">
+              Pintable Melee
+            </div>
+            <div class="text">
+              Original idea. Currently in development. First Unity Project. Battle
+              out in a 3D scene, causing the floor to rise and sink, causing your
+              opponents and other objects to fly in the air, or be kicked back.
+            </div>
           </div>
-        </a>
-      </div>
-      <div class="block-img cut-top-left right">
-        <img src="assets/melee.gif" width="100%">
-      </div>
-    </div>
-
-
-    <!-- DUNGEONS OF GALDAMIR -->
-    <div class="game text-white brown-bkg">
-      <div class="block-img cut-bottom-right">
-        <img src="assets/dogmap.png" width="115%" style="margin-top: -15%; margin-left: -15%;">
-      </div>
-      <div class="block-text right">
-        <div class="center large">
-          <img src="assets/dogtitle.png" width="70%">
         </div>
-        <div class="desc center-block dog">
-          Rogue-like mobile game. Explore a randomly generated map, kill
-          enemies, get loot, level up, and much more. Very old version available
-          on Google Play Store, currently in development.
+      </div>
+
+      <!-- DUNGEONS OF GALDAMIR -->
+      <div class="game">
+        <div class="img">
+          <img src="assets/dogmap.png" width="115%" style="margin-top: -15%; margin-left: -15%;">
         </div>
-        <hr>
-        <a href="dog">
-          <div class="center btn ffx fx-white center-block">
-            <span class="medium">GO TO SITE</span>
+
+        <div class="description">
+          <div class="cutout">
+            <div class="title">
+              <img src="assets/dogtitle.png" width="40%">
+            </div>
           </div>
-        </a>
+          <div class="cutout white">
+            <div class="title">
+              Dungeons of Galdamir
+            </div>
+            <div class="text">
+              Rogue-like mobile game. Explore a randomly generated map, kill
+              enemies, get loot, level up, and much more. Very old version available
+              on Google Play Store, currently in development.
+            </div>
+          </div>
+        </div>
       </div>
+
     </div>
-
-
 
   </body>
 
