--- a/monitoria/02-formulas/index.html
+++ b/monitoria/02-formulas/index.html
@@ -22,57 +22,50 @@
     <br><br>
 
     <h1 class="center">
-      I. Algoritmos Basicos
+      II. Formulas
     </h1>
     <br><br>
 
-    <div class="help">
-      // Declaración:<br>
-      int a;<br>
-      float b;<br>
-      // Asignación:<br>
-      a = 2;<br>
-      b = 0.3;<br>
-    </div><br><br>
-
     <div class="exercise easy">
-      Se desea saber el area de un triangulo, dada su base y altura.
+      Se desea saber cuanto se le ha de pagar a un empleado, dadas sus horas de trabajo.<br>
+      Valor de hora de trabajo: 23,729 pesos.
     </div>
     <br><br>
 
     <div class="exercise easy">
-      Se desea saber la longitud de la hipotenusa de un triangulo, dada la longitud
-      de ambos catetos.
+      Se desea saber la pendiente de una linea que pasa por el origen, y por [3.3 , 5.8].<br>
+      Permita al usuario ingresar nuevas coordenadas.
     </div>
     <br><br>
 
     <div class="exercise easy">
-      Se desea saber el area y circunferencia de un circulo, dado su radio.
+      Se desea saber la temperatura en Celsius de un vaso con agua que se encuentra a 48ºF.
+    </div>
+    <br><br>
+
+    <div class="exercise easy">
+      Calcule el promedio de un estudiante para una materia, dadas las notas de
+      sus 4 examenes.
+    </div>
+    <br><br>
+
+    <div class="exercise easy">
+        Diseñar un algoritmo que represente, en horas, minutos y segundos, un tiempo expresado en segundos.
     </div>
     <br><br>
 
     <div class="exercise medium">
-      Se desea saber cuantos meses han transcurrido entre dos fechas.
+      Se desea saber cuantos elefantes se necesitan apilar para llegar de la tierra al sol.<br>
+      Para al menos dos tipos de elefantes.
     </div>
     <br><br>
 
     <div class="exercise hard">
-      Se desea saber cuantas horas tarda en llenarse un tanque con capacidad de 50
-      metros cubicos, utilizando una manguera de capacidad L litros de agua por
-      minuto.
-      <p>
-      Recuerde que un metro cubico equivale a 1000 litros.
-    </div>
-    <br><br>
-
-    <div class="exercise hard">
-      Se desea saber cuanto debe pagar un cliente de un sitio de comida rapida,
-      dada la cantidad de gaseosas, perros calientes y hamburguesas pedidas.
-      <p>
-        Precios:<br>
-        Perro Caliente: $5500<br>
-        Hamburguesa: $8000<br>
-        Gaseosa: $2500<br>
+      Se desea saber el valor de X de la formula general.<br>
+      a = 15.<br>
+      b = 3.2.<br>
+      c = 132.4.<br>
+      Permita al usuario ingresar los valores.
     </div>
     <br><br>
 
