--- a/monitoria/present.html
+++ b/monitoria/present.html
@@ -9,16 +9,16 @@
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="../website/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="../website/css/colors.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link rel="icon" href="../website/assets/icon.png">
+    <link href="/website/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="/website/css/colors.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link rel="icon" href="/website/assets/icon.png">
   </head>
 
   <body>
 
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="../website/js/scripts.js"></script>
+    <script src="/website/js/scripts.js"></script>
 
     <br><br>
 
@@ -31,7 +31,7 @@
     </h2>
 
     <br><br>
-    
+
   </body>
 
 </html>
