--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width"><title>Andrés Movilla</title><link rel="icon" type="image/x-icon" href="/favicon.ico"/><meta content="Web portfolio"/><script defer="defer" src="/static/js/main.99497a7f.js"></script><link href="/static/css/main.ab9989cb.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Andrés Movilla</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta
+      content="Web portfolio"
+    />
+    <script type="module" crossorigin src="/assets/index.7b2a5ed5.js"></script>
+    <link rel="stylesheet" href="/assets/index.bd24eeed.css">
+  </head>
+  <body>
+    <div id="root"></div>
+    
+  </body>
+</html>
